$Id$

Denora v1.4.5-SVN
-----------------

Additions
10/05/25 r355 [3] Added Portuguese language file

Changes
10/07/05 r361 do_p10_burst now supports +L channel mode
10/07/02 r358 inspircd12 module declared compatible with inspircd 2.0
10/07/02 r357 Updated GeoIP.dat

Fixes
10/07/05 r361 Fixed nefarious13 module missing channel +L support
10/07/03 r358 Fixed autoop not working properly on some ircds
10/03/27 r353 [2] Fixed Nefarious kill message parsing
10/03/15 r352 [2] Fixed X3 version reply interpretation
09/09/28 r345 Fixed sql_do_chanmodes crashing on missing parameters
09/09/21 r340 Fixed crash on P10 ban burst
09/09/13 r338 inspircd12 now sends TS6SID on BURST
09/09/13 r336 [1] Fixed issues in the ratbox protocol module
09/09/13 r333 [1] Fixed crash with ts6 when network contains a non-ts6 server

Removals
n/a

Developers
Denora Team <dev@denorastats.org>

Contributors
[1] Jeremy <jeremy@ssnet.ca>
[2] Jobe <jobe@mdbnet.co.uk>
[3] drak (Giovani Roberto Sehnen) <drak@clubeirc.com>



Denora v1.4.4
-------------

Additions
09/09/13 r330 Denora now logs when loading db files
09/09/10 r324 Added support for Nefarious 1.3 (untested) [closes #564]
09/09/08 r318 Added support for InspIRCd 1.2 METADATA message [closes #566]
09/09/08 r318 ustatsregistered now also checks for user account [closes #566]
09/09/08 r314 Added option to exclude +B users from chanstats [closes #546]
09/09/08 r313 Added chan_clearmodes function to clear given chanmodes

Changes
09/09/11 r328 Spamfilter actions are no longer translated for compatibility
09/09/11 r327 /stats letter for getting spamfilters now definable
09/09/07 r310 Disable nick tracking on NICK if ustatsregistered is enabled
09/09/03 r304 Updated GeoIP.dat

Fixes
09/09/13 r330 Fixed segfault introduced in r327
09/09/08 r321 Ported fixes to Nefarious since last release to all P10 ircds
09/09/08 r319 Added OM/CM support to all p10 ircds
09/09/07 r312 Fixed channel part not being parsed if reason missing